egonlang-core/res/examples/invalid/block_with_stmts_having_type_invalid_stmts_and_returning_expr.eg
({
    ({
        true < false;

        "foo" + "bar";

        [] and void;
        123 or [];

        void or 123 and [] or true;

        [] <= []
    })
});

// out: TypeError: mismatched types: expected type `number` but received `bool`
// out: TypeError: mismatched types: expected type `number` but received `bool`

// out: TypeError: mismatched types: expected type `number` but received `string`
// out: TypeError: mismatched types: expected type `number` but received `string`

// out: TypeError: mismatched types: expected type `bool` but received `list<unknown>`
// out: TypeError: mismatched types: expected type `bool` but received `()`

// out: TypeError: mismatched types: expected type `bool` but received `number`
// out: TypeError: mismatched types: expected type `bool` but received `list<unknown>`

// out: TypeError: mismatched types: expected type `bool` but received `number`
// out: TypeError: mismatched types: expected type `bool` but received `list<unknown>`
// out: TypeError: mismatched types: expected type `bool` but received `()`

// out: TypeError: mismatched types: expected type `number` but received `list<unknown>`
// out: TypeError: mismatched types: expected type `number` but received `list<unknown>`